src/components/d-screen/DScreen.style.scss
@import "../../styles/helpers";
@import "../../styles/media";

.d-screen {
  min-width: 100%;
  min-height: 100%;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  max-height: 100vh;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  position: relative;

  * {
    box-sizing: border-box;
  }


  &__v-bar {
    width: 100%;
    position: relative;
    background: $primary;

    &__resizable {
      $height: 50px;

      height: $height;
      position: absolute;
      background: transparent;
      display: block;
      width: 100%;
      content: "";
      left: 0;
      cursor: ns-resize;

      &-label {
        @include box(false);
        position: absolute;
        z-index: 2;
        left: 50%;
        display: flex;
        transform: translateX(-50%);
        padding: .25rem;

        &--top {
          border-top-right-radius: 0;
          border-top-left-radius: 0;
          top: $height - ($height / 4);
        }

        &--bottom {
          border-bottom-right-radius: 0;
          border-bottom-left-radius: 0;
          bottom: $height - ($height / 4);
        }
      }

      &:hover {
        //background: #29BF12;

        &:after {
          height: 1px;
          width: 100%;
          background: $info;
          content: "";
          position: absolute;
          top: 0;
        }
      }

      &--top {
        bottom: ($height / 4) * -1;
        z-index: 2;

        &:hover::after {
          top: $height - ($height / 4);
        }
      }

      &--bottom {
        top: ($height / 4) * -1;
        z-index: 1;

        &:hover::after {
          top: ($height / 4) - 1px;
        }
      }


      //border-color: $info !important;
    }

    .d-screen__item {
      writing-mode: unset !important;
    }

    > .d-screen__bar-content {
      width: 100%;
      height: 100%;
      padding: .5rem;
      overflow: auto;
      display: none;
      gap: .5rem;
      align-items: start;


    }

    &--top {
      border-bottom: 1px solid borderColor();
    }

    &--bottom {
      border-top: 1px solid borderColor();
    }
  }


  &__h-bar {
    height: 100%;
    position: relative;
    background: $primary;

    &__resizable {
      $width: 50px;

      width: $width;
      position: absolute;
      background: transparent;
      display: block;
      height: 100%;
      content: "";
      top: 0;
      cursor: ew-resize;

      &-label {
        @include box(false);
        position: absolute;
        top: 50%;
        display: flex;
        z-index: 2;
        transform: translateY(-50%);
        padding: .25rem;

        &--left {
          border-top-left-radius: 0;
          border-bottom-left-radius: 0;
          left: $width - ($width / 4);
        }

        &--right {
          border-top-right-radius: 0;
          border-bottom-right-radius: 0;
          right: $width - ($width / 4);
        }
      }

      &:hover {
        //background: #29BF12;

        &:after {
          width: 1px;
          height: 100%;
          background: $info;
          content: "";
          position: absolute;
          top: 0;
        }
      }

      &--left {
        right: ($width / 4) * -1;
        z-index: 2;

        &:hover::after {
          left: $width - ($width / 4);
        }
      }

      &--right {
        left: ($width / 4) * -1;
        z-index: 1;

        &:hover::after {
          left: ($width / 4) - 1px;
        }
      }


      //border-color: $info !important;
    }

    .d-screen__item {
      writing-mode: vertical-rl;
    }

    > .d-screen__bar-content {
      overflow: auto;
      display: none;
      gap: .5rem;
      padding: .5rem;
      height: 100%;
      width: 100%;
      position: relative;
      flex-direction: column;

    }

    &--left {
      border-right: 1px solid borderColor();
    }

    &--right {
      border-left: 1px solid borderColor();
    }
  }

  &__v-content {
    height: 100%;
    width: 100%;
    overflow: hidden;
    display: flex;
    position: relative;
  }

  &__h-content {
    height: 100%;
    width: 100%;
    overflow: hidden;
    position: relative;
  }

  &__content {
    color: white;
    background: $primary;
    height: 100%;
    overflow: auto;
    width: 100%;
    position: absolute;
  }

  &__item {
    @include box(true);
    width: fit-content;
    padding: .25rem;
    font-size: .75rem;
    gap: .25rem;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
  }

  &__collapsable-item {
    @include box(true);
    width: fit-content;
    padding: .25rem;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    z-index: 9999999;
  }
}

